@@ -21,6 +21,7 @@ Bugs fixed
 * #2290: Fix ``sphinx.ext.mathbase`` use of amsfonts may break user choice of math fonts
 * #2324: Print a hint how to increase the recursion limit when it is hit.
 * #1565: Revert new warning; the new warning will be triggered from version 1.4 on.
+* #2329: Refresh environment forcely if source directory has changed.
 
 
 Release 1.3.5 (released Jan 24, 2016)
